@@ -5,6 +5,7 @@
 21-Jan-2006
 ~~~~~~~~~~~
 Made DBus 0.2x support work again (Thomas Leonard).
+Don't fail to start if Environment.py is missing (Thomas Leonard).
 Offer to restart the window manager when the setting changes (Thomas Leonard).
 
 19-Jan-2006
